# weixin-ilink-sdk-rust

./: Cargo.toml  README.md
examples/: echo_bot.rs
src/: client.rs  error.rs  http.rs  http_client.rs  lib.rs  store.rs  types.rs  voice.rs
src/auth/: credential.rs  mod.rs  qr_login.rs
src/cdn/: aes_ecb.rs  download.rs  mod.rs  upload.rs
src/messaging/: mod.rs  receive.rs  send.rs
src/util/: media_type.rs
