[package]
name = "weixin-ilink-sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for the Weixin iLink Bot API"
license = "MIT"
repository = "https://github.com/weixin-ilink/weixin-ilink-sdk-rust"

[dependencies]
http = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
url = "2"
base64 = "0.22"
rand = "0.10"
md-5 = "0.10"
aes = "0.8"
ecb = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["block-padding"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
qrcode = "0.14"
hex = "0.4"
urlencoding = "2"
parking_lot = "0.12"
silk-codec = "0.1.0"
libsql = "0.9.30"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[[example]]
name = "echo_bot"
path = "examples/echo_bot.rs"
